--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "next",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -38,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "autoprefixer": "^10.4.0",
-    "cypress": "^9.1.1",
+    "cypress": "^14.2.1",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.1"
   }
